--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
                         <ul class="sub-menu">
                             <li><a href="single-video.html">Video Post</a></li>
                             <li><a href="single-audio.html">Audio Post</a></li>
-                            <li><a href="single-standard.html">Standard Post</a></li>
+                            <li><a href="#0">Standard Post</a></li>
                         </ul>
                     </li>
                     <li><a href="styles.html" title="">Styles</a></li>
