--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="column">
                         <h1 class="s-hero__slide-text">
                             <a>
-                                Know Their for them Abilities, Not Their Disability.
+                                Know them for Their Abilities, Not Their Disability.
                             </a>
                         </h1>
                     </div>
