--- a/PhysicalDisability.html
+++ b/PhysicalDisability.html
@@ -208,7 +208,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay Alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay Alhindi</a>
                                     </span>
                                 </span>
                                 </div>
