--- a/VisionImpairment.html
+++ b/VisionImpairment.html
@@ -174,7 +174,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay alhindi</a>
                                     </span>
                                 </span>
                                 </div>
@@ -363,7 +363,7 @@
                               <div class="entry__meta">
                                   <span class="byline"">By:
                                       <span class='author'>
-                                          <a href="mailto: loay1alhindi@gmail.com">Loay alhindi</a>
+                                          <a href="mailto: loay1alhindi2@gmail.com">Loay alhindi</a>
                                   </span>
                               </span>
                               </div>
@@ -394,7 +394,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay alhindi</a>
                                     </span>
                                 </span>
                                 </div>
@@ -424,7 +424,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay alhindi</a>
                                     </span>
                                 </span>
                                 </div>
@@ -454,7 +454,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay alhindi</a>
                                     </span>
                                 </span>
                                 </div>
@@ -484,7 +484,7 @@
                               <div class="entry__meta">
                                   <span class="byline"">By:
                                       <span class='author'>
-                                          <a href="mailto: loay1alhindi@gmail.com">Loay alhindi</a>
+                                          <a href="mailto: loay1alhindi2@gmail.com">Loay alhindi</a>
                                   </span>
                               </span>
                               </div>
@@ -514,7 +514,7 @@
                             <div class="entry__meta">
                                 <span class="byline"">By:
                                     <span class='author'>
-                                        <a href="mailto: loay1alhindi@gmail.com">loay alhindi</a>
+                                        <a href="mailto: loay1alhindi2@gmail.com">loay alhindi</a>
                                 </span>
                             </span>
                             </div>
