--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">loay alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">loay alhindi</a>
                                         </span>
                                     </span>
                                 </div>
@@ -261,7 +261,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay alhindi</a>
                                     </span>
                                 </span>
                                 </div>
@@ -326,7 +326,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">loay alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">loay alhindi</a>
                                     </span>
                                 </span>
                                 </div>
@@ -358,7 +358,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay Alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay Alhindi</a>
                                     </span>
                                 </span>
                                 </div>
@@ -390,7 +390,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay Alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay Alhindi</a>
                                     </span>
                                 </span>
                                 </div>
@@ -421,7 +421,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay Alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay Alhindi</a>
                                     </span>
                                 </span>
                                 </div>
@@ -453,7 +453,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay Alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay Alhindi</a>
                                     </span>
                                 </span>
                                 </div>
@@ -515,7 +515,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay alhindi</a>
                                     </span>
                                 </span>
                                 </div>
@@ -575,7 +575,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay alhindi</a>
                                     </span>
                                 </span>
                                 </div>
