--- a/DeafOrHardOfHearing.html
+++ b/DeafOrHardOfHearing.html
@@ -301,7 +301,7 @@
                               <div class="entry__meta">
                                   <span class="byline"">By:
                                       <span class='author'>
-                                          <a href="mailto: loay1alhindi@gmail.com">Loay Alhindi</a>
+                                          <a href="mailto: loay1alhindi2@gmail.com">Loay Alhindi</a>
                                   </span>
                               </span>
                               </div>
@@ -333,7 +333,7 @@
                               <div class="entry__meta">
                                   <span class="byline"">By:
                                       <span class='author'>
-                                          <a href="mailto: loay1alhindi@gmail.com">Loay Alhindi</a>
+                                          <a href="mailto: loay1alhindi2@gmail.com">Loay Alhindi</a>
                                   </span>
                               </span>
                               </div>
@@ -364,7 +364,7 @@
                             <div class="entry__meta">
                                 <span class="byline"">By:
                                     <span class='author'>
-                                        <a href="mailto: loay1alhindi@gmail.com">Loay Alhindi</a>
+                                        <a href="mailto: loay1alhindi2@gmail.com">Loay Alhindi</a>
                                 </span>
                             </span>
                             </div>
