--- a/MentalHealthConditions.html
+++ b/MentalHealthConditions.html
@@ -266,7 +266,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay alhindi</a>
                                         </span>
                                     </span>
                                 </div>
@@ -297,7 +297,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay alhindi</a>
                                     </span>
                                 </span>
                                 </div>
@@ -328,7 +328,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay alhindi</a>
                                     </span>
                                 </span>
                                 </div>
@@ -361,7 +361,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay alhindi</a>
                                     </span>
                                 </span>
                                 </div>
@@ -392,7 +392,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay alhindi</a>
                                     </span>
                                 </span>
                                 </div>
@@ -422,7 +422,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay alhindi</a>
                                     </span>
                                 </span>
                                 </div>
@@ -454,7 +454,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay alhindi</a>
                                     </span>
                                 </span>
                                 </div>
@@ -484,7 +484,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay alhindi</a>
                                     </span>
                                 </span>
                                 </div>
@@ -514,7 +514,7 @@
                                 <div class="entry__meta">
                                     <span class="byline"">By:
                                         <span class='author'>
-                                            <a href="mailto: loay1alhindi@gmail.com">Loay alhindi</a>
+                                            <a href="mailto: loay1alhindi2@gmail.com">Loay alhindi</a>
                                     </span>
                                 </span>
                                 </div>
