--- a/contact.html
+++ b/contact.html
@@ -211,8 +211,8 @@
                                     <div class="entry__excerpt">
                                         <p style="text-align: center; font-size: 150%;"> <i>Ali Saleh</i></p>
                                         <button onclick="window.location.href='mailto: ali.saleh200420@gmail.com';" style="background-color: white;"><img src="https://th.bing.com/th/id/R.3298ee40773fc9938af6f59a6dce0734?rik=CRCnV0vzEyRDeA&pid=ImgRaw&r=0" style="width: 50px;"></button>
-                                        <button onclick="window.location.href='https://www.facebook.com/loayy17';" style="background-color: white;"><img src="images/facebook-logo-2021.svg" style="width: 50px;"></button>
-                                        <button onclick="window.location.href='https://www.instagram.com/loayy17/';" style="background-color: white;"><img src="https://th.bing.com/th/id/OIP.JtmXSh_uyZBaTg1eXd-NtgAAAA?pid=ImgDet&rs=1" style="width: 50px;"></button>
+                                        <button onclick="window.location.href='https://www.facebook.com/ali.mhmmid?mibextid=2JQ9oc';" style="background-color: white;"><img src="images/facebook-logo-2021.svg" style="width: 50px;"></button>
+                                        <button onclick="window.location.href='https://instagram.com/ali_saleh_b?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D';" style="background-color: white;"><img src="https://th.bing.com/th/id/OIP.JtmXSh_uyZBaTg1eXd-NtgAAAA?pid=ImgDet&rs=1" style="width: 50px;"></button>
                                         <button onclick="window.location.href='https://wa.me/962780579496'" style="background-color: white;"><img src="https://th.bing.com/th/id/OIP.QpjCtdwhkGO3m-OMqblIsQHaHa?pid=ImgDet&rs=1" style="width: 50px;"></button>
                                         <br><br><br><br><br><br>
                                     </div>
@@ -224,15 +224,15 @@
     
                         <div class="entry__thumb">
                             <a href="#0" class="thumb-link">
-                                <img src="images\AliAlquran.jpg" 
-                                     srcset="images\AliAlquran.jpg 1x, images\AliAlquran.jpg 2x" alt="">
+                                <img src="images\AliQ.jpeg" 
+                                     srcset="images\AliQ.jpeg 1x, images\AliQ.jpeg 2x" alt="">
                                     </a>
                                 </div> <!-- end entry__thumb -->
             
                                 <div class="entry__text">
                                     <div class="entry__excerpt">
                                         <p style="text-align: center; font-size: 150%;"> <i>Ali Al-Quran</i></p>
-                                        <button onclick="window.location.href='mailto: loay1alhindi2@gmail.com';" style="background-color: white;"><img src="https://th.bing.com/th/id/R.3298ee40773fc9938af6f59a6dce0734?rik=CRCnV0vzEyRDeA&pid=ImgRaw&r=0" style="width: 50px;"></button>
+                                        <button onclick="window.location.href='mailto: alquraanali42@gmail.com';" style="background-color: white;"><img src="https://th.bing.com/th/id/R.3298ee40773fc9938af6f59a6dce0734?rik=CRCnV0vzEyRDeA&pid=ImgRaw&r=0" style="width: 50px;"></button>
                                         <button onclick="window.location.href='https://www.facebook.com/ali.alquraan.560?mibextid=2JQ9oc';" style="background-color: white;"><img src="images/facebook-logo-2021.svg" style="width: 50px;"></button>
                                         <button onclick="window.location.href='https://www.instagram.com/ali.alquraan.560/';" style="background-color: white;"><img src="https://th.bing.com/th/id/OIP.JtmXSh_uyZBaTg1eXd-NtgAAAA?pid=ImgDet&rs=1" style="width: 50px;"></button>
                                         <button onclick="window.location.href='https://wa.me/962779743927'" style="background-color: white;"><img src="https://th.bing.com/th/id/OIP.QpjCtdwhkGO3m-OMqblIsQHaHa?pid=ImgDet&rs=1" style="width: 50px;"></button>
