--- a/about.html
+++ b/about.html
@@ -218,8 +218,8 @@
     
                         <div class="entry__thumb">
                             <a href="#0" class="thumb-link">
-                                <img src="images\AliAlquran.jpg" 
-                                     srcset="images\AliAlquran.jpg 1x, images\AliAlquran.jpg 2x" alt="">
+                                <img src="images\AliQ.jpeg" 
+                                     srcset="images\AliQ.jpeg 1x, images\AliQ.jpeg 2x" alt="">
                             </a>
                         </div> <!-- end entry__thumb -->
     
